--- a/page3.html
+++ b/page3.html
@@ -152,7 +152,7 @@
             <label class="custom-file-upload" id="fileLabel" for="csvfile">
                 <span id="label-text">Escolher arquivo CSV</span>
                 <!-- Ícone PNG, oculto inicialmente -->
-                <img id="csv-icon" src="csv.png" alt="Ícone CSV" style="display:none; width:50px; height:50px;" />
+                <img id="csv-icon" src="./csv.png" alt="Ícone CSV" style="display:none; width:50px; height:50px;" />
             </label>
             <input type="file" id="csvfile" name="csvfile" accept=".csv" required />
 
